--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/html/2^x.html"
+export_path="builds/web/2^x.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
