Decoupled board code from game code, added restart button

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.sh"
+exclude_filter="*.sh,builds/*"
 export_path="builds/web/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -48,7 +48,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.sh"
+exclude_filter="*.sh,builds/*"
 export_path="builds/2x.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -253,7 +253,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.sh"
+exclude_filter="*.sh,builds/*"
 export_path="builds/linux/2x.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -293,7 +293,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="*.sh"
+exclude_filter="*.sh,builds/*"
 export_path="builds/windows/2x.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
