--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,10 +46,10 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="*.sh,builds/*"
-export_path="builds/2x.apk"
+export_path="builds/android/2x.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
-encrypt_pck=false
+encrypt_pck=true
 encrypt_directory=false
 
 [preset.1.options]
@@ -67,7 +67,7 @@ architectures/x86_64=false
 version/code=1
 version/name=""
 package/unique_name="xyz.maciejniziolek.twox"
-package/name="2^x"
+package/name="2x"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
